# evaluate_protobuf

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  message.proto
